--- a/Index.html
+++ b/Index.html
@@ -5,17 +5,19 @@
     <title> Tim Berners Lee </title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-    <ul class="menu">
-        <li class="links>"HOME"></li>
-        <li class="link"><a links="#welcome">Home</a></li>
-        <li class="link"><a links="#videos">My Videos</a> </li>
-        <li class="link"><a links="#work">Work</a></li>
-        <li class="link"><a links="#writings">Writings</a> </li>
-        <li class="link"><a links="#contact">Contact</a></li>
-    </ul>
+    <center>
+        <ul class="menu">
+            <li class="link"><a href="#welcome">Home</a></li>
+            <li class="link"><a href="#videos">My Videos</a> </li>
+            <li class="link"><a href="#work">Work</a></li>
+            <li class="link"><a href="#writings">Writings</a> </li>
+            <li class="link"><a href="#contact">Contact</a></li>
+        </ul>
+    </center>
     <section id="welcome">
         <div class="parallax-inner">
             <img src="stbl.jpg" class="profile">
@@ -25,7 +27,7 @@
     </section>
     <section id="bio">
         <h1>Hi!</h1>
-           <div class="line"></div>          
+        <div class="line"></div>
         <p>Tim Berners-Lee is a software engineer who invented the Internet (or the World Wide Web) in 1989 while at CERN, the European Particle Physics Laboratory. He is director of the World Wide Web Consortium that he founded and a Professor in the Computer Science Department at the University of Oxford. In 2001 he became a Fellow of the Royal Society and in 2004 he was knighted.
         </p>
         <br>
@@ -52,6 +54,13 @@
         <br>
         <a class="article" href="https://interestingengineering.com/how-did-tim-berners-lee-change-the-world-with-the-world-wide-web" target="_blank">How Did Tim Berners-Lee Change the World With the World Wide Web?</a>
     </section>
+<section id="contact">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3806.3153057542922!2d78.38251371543453!3d17.444616388044277!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bcb915ffa732bff%3A0xd87c7aff8bf62fdc!2sHegde%20Hospital%20%7C%20Best%20Hospital%20in%20Hyderabad!5e0!3m2!1sen!2sin!4v1608548743225!5m2!1sen!2sin" height="450" frameborder="0"  allowfullscreen="" ></iframe>
+<div class="contact1">
+    <a href="mailto:akshitahegde507@gmail.com?Subject=Hello"> <i class="fa fa-envelope"></i>&nbsp;&nbsp;<h3>akshitahegde507@gmail.com</h3> </a>
+    </div>
+    </section>
 
+</body>
 
-</body></html>
+</html>
